--- a/annuncio_eliminato.html
+++ b/annuncio_eliminato.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="it">
 
 <head>
     <title>bee-market</title>
@@ -65,7 +65,6 @@
     </nav>
 
     <div class="container drop-shadow mt-5 mb-5 text-center pt-2">
-
         <h1>Il tuo annuncio è stato eliminato!</h1>
         <img src="img/bee_thumbs_up.png" class="h-75 mb-3 img-fluid" alt="">
     </div>
