--- a/risultati.html
+++ b/risultati.html
@@ -221,49 +221,32 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/FFB6C1/000000" alt="">
+                            <a href="annuncio.html"><img src="img/lidl.jpeg" alt="" class="altezza-massima"></a>
                             <a href="#0" class="adtocart" id="a0" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
                             </a>
                         </div>
                         <div class="card-body text-center">
-                            <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
-                            <b>Usato</b>
-                            <i>Primiero San Martino di Castrozza, Trentino-Alto Adige</i>
+                            <h4><a href="#0" class="pro-title">Chitarra Lidl</a></h4>
+                            <p class="price">€100.00</p>
+                            <b>Nuovo</b>
+                            <i>Brescia, Lombardia</i>
                         </div>
                     </section>
                 </div>
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/6495ED/000000" alt="">
+                            <a href="annuncio.html"><img src="img/image_not_found.png" alt="" class="altezza-massima"></a>
                             <a href="#0" class="adtocart" id="a1" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
                             </a>
                         </div>
                         <div class="card-body text-center">
-                            <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
-                            <b>Usato</b>
-                            <i>Castrocaro Terme e Terra del Sole, Emilia-Romagna</i>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-lg-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/FF7F50/000000" alt="">
-                            <a href="#0" class="adtocart" id="a2" onclick="checked(id)">
-                                <img class="obs-icon" src="img/binocolo.svg" alt="">
-                                <img class="obs-icon" src="img/check.svg" alt="">
-                            </a>
-                        </div>
-                        <div class="card-body text-center">
-                            <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <h4><a href="annuncio.html" class="pro-title">Leopard Shirt Dress</a></h4>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                             <i>Milano, Lombardia</i>
                         </div>
@@ -272,15 +255,32 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/00BFFF/000000" alt="">
+                            <a href="annuncio.html"><img src="img/image_not_found.png" alt="" class="altezza-massima"></a>
+                            <a href="#0" class="adtocart" id="a2" onclick="checked(id)">
+                                <img class="obs-icon" src="img/binocolo.svg" alt="">
+                                <img class="obs-icon" src="img/check.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="card-body text-center">
+                            <h4><a href="annuncio.html" class="pro-title">Leopard Shirt Dress</a></h4>
+                            <p class="price">€300.00</p>
+                            <b>Usato</b>
+                            <i>Milano, Lombardia</i>
+                        </div>
+                    </section>
+                </div>
+                <div class="col-lg-4">
+                    <section class="panel">
+                        <div class="pro-img-box">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a3" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
                             </a>
                         </div>
                         <div class="card-body text-center">
-                            <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <h4><a href="annuncio.html" class="pro-title">Leopard Shirt Dress</a></h4>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -288,7 +288,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/00CED1/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a4" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -296,7 +296,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -304,7 +304,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/9400D3/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a5" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -312,7 +312,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Nuovo</b>
                         </div>
                     </section>
@@ -320,7 +320,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/FFD700/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a6" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -328,7 +328,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -336,7 +336,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/ADD8E6/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a7" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -344,7 +344,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -352,7 +352,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/20B2AA/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a8" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -360,7 +360,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -368,7 +368,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/3CB371/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a9" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -376,7 +376,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -384,7 +384,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/FFB6C1/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a10" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -392,7 +392,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -400,7 +400,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/C71585/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a11" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -408,7 +408,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -416,7 +416,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/191970/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a12" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -424,7 +424,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -432,7 +432,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/87CEEB/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a13" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -440,7 +440,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
@@ -448,7 +448,7 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <img src="https://via.placeholder.com/250x220/FFB6C1/000000" alt="">
+                            <img src="img/image_not_found.png" alt="" class="altezza-massima">
                             <a href="#0" class="adtocart" id="a14" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
@@ -456,7 +456,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4><a href="#0" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">$300.00</p>
+                            <p class="price">€300.00</p>
                             <b>Usato</b>
                         </div>
                     </section>
