--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                     <img src="img/image_not_found.png" alt=""/>
                                     <div class="file btn btn-lg x btn-primary mt-0">
                                         Inserisci foto
-                                        <input type="file" name="file"/>
+                                        <input type="file" name="file" class="w-100 h-100"/>
                                     </div>
                                 </div>
                             </div>
