sistemata una roba

--- a/risultati.html
+++ b/risultati.html
@@ -398,17 +398,17 @@
                 <div class="col-lg-4">
                     <section class="panel">
                         <div class="pro-img-box">
-                            <a href="annuncio.html"><img src="img/image_not_found.png" alt="" class="altezza-massima"></a>
+                            <a href="annuncio.html"><img src="img/annuncio5.jpg" alt="" class="altezza-massima"></a>
                             <a href="#0" class="adtocart" id="a2" onclick="checked(id)">
                                 <img class="obs-icon" src="img/binocolo.svg" alt="">
                                 <img class="obs-icon" src="img/check.svg" alt="">
                             </a>
                         </div>
                         <div class="card-body text-center">
-                            <h4><a href="annuncio.html" class="pro-title">Leopard Shirt Dress</a></h4>
-                            <p class="price">€300.00</p>
+                            <h4><a href="annuncio.html" class="pro-title">Marranzano antico</a></h4>
+                            <p class="price">€50.00</p>
                             <b>Usato</b>
-                            <i>Milano, Lombardia</i>
+                            <i>Casatenovo, Lecco</i>
                         </div>
                     </section>
                 </div>
