--- a/profilo_eliminato.html
+++ b/profilo_eliminato.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet"  type="text/css" href="css/annuncio.css">
     <link rel="stylesheet"  type="text/css" href="css/profile.css">
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 </head>
 
 <body>
