ulitmato per davveramente

--- a/operazioni.html
+++ b/operazioni.html
@@ -619,7 +619,7 @@
                         <input type="radio" id="serieta3-a2" name="rating-s" value="3" /><label for="serieta3-a2" title="3 star"><i class="fas fa-star fa-sm"></i></label>
                         <input type="radio" id="serieta2-a2" name="rating-s" value="2" /><label for="serieta2-a2" title="2 star"><i class="fas fa-star fa-sm"></i></label>
                         <input type="radio" id="serieta1-a2" name="rating-s" value="1" /><label for="serieta1-a2" title="1 star"><i class="fas fa-star fa-sm"></i></label>
-                        <span class="mr-3"><i><b>Valuta:</b></i></span>
+                        <span class="mr-3"><i><b>Serietà:</b></i></span>
                     </div>
                 </div>
                 <div class="media-body">
@@ -629,7 +629,7 @@
                         <input type="radio" id="puntalita3-a2" name="rating-p" value="3" /><label for="puntalita3-a2" title="3 star"><i class="fas fa-star fa-sm"></i></label>
                         <input type="radio" id="puntalita2-a2" name="rating-p" value="2" /><label for="puntalita2-a2" title="2 star"><i class="fas fa-star fa-sm"></i></label>
                         <input type="radio" id="puntalita1-a2" name="rating-p" value="1" /><label for="puntalita1-a2" title="1 star"><i class="fas fa-star fa-sm"></i></label>
-                        <span class="mr-3"><i><b>Valuta:</b></i></span>
+                        <span class="mr-3"><i><b>Puntualità:</b></i></span>
                     </div>
                 </div>
             </div>
